--- a/src/templates/passwordForm.html
+++ b/src/templates/passwordForm.html
@@ -4,6 +4,63 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="recover.css">
     <title>Reset Password</title>
+    <style>
+        .container{
+            background-color: darkgray;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+
+
+        }
+
+        .card{
+            background-color: white;
+            position: relative;
+            width: 80%;
+            height: 80%;
+            top: 10%;
+            bottom: 10%;
+            left: 10%;
+            right: 10%;
+        }
+
+        .card img{
+            width: 40%;
+            height: auto;
+            position: relative;
+            right: 30%;
+            left: 30%;
+
+        }
+
+        .card p{
+            color: black;
+            font-family: "Arial Rounded MT Bold";
+            text-align: center;
+        }
+
+        .title{
+            padding-top: 5%;
+            font-weight: bold;
+            font-size: 20px;
+            margin-left: 20%;
+            margin-right: 20%;
+            width: 60%;
+
+        }
+
+        .button{
+            background-color: #57B7EB;
+            border-radius: 5px;
+            font-weight: bold;
+            color: white;
+            margin-left: 40%;
+            margin-right: 40%;
+            width: 20%;
+        }
+
+    </style>
 </head>
 <body>
 <div class="container">
