--- a/src/templates/passwordForm.html
+++ b/src/templates/passwordForm.html
@@ -28,10 +28,10 @@
         .card img{
             width: 40%;
             height: auto;
+            display: block;
             position: relative;
-            right: 30%;
             left: 30%;
-
+            right: 30%;
         }
 
         .card p{
@@ -69,7 +69,7 @@
         <br>
         <img src="https://firebasestorage.googleapis.com/v0/b/lowlowburger.appspot.com/o/fast-food.png?alt=media&token=63594e85-5321-431b-b544-9fa33aa9b79c">
         <br>
-        <p>Hola, UserName</p>
+        <p>Hola</p>
         <p>Has solicitado un cambio de contraseña.</p>
         <br>
         <button class="button">Cambiar Contraseña</button>
