--- a/src/templates/passwordForm.html
+++ b/src/templates/passwordForm.html
@@ -8,56 +8,76 @@
         .container{
             background-color: darkgray;
             position: fixed;
-            width: 100%;
-            height: 100%;
-
-
+            width: 70%;
+            height: 70%;
+            top: 15%;
+            right: 15%;
         }
 
         .card{
             background-color: white;
             position: relative;
-            width: 80%;
-            height: 80%;
-            top: 10%;
-            bottom: 10%;
-            left: 10%;
-            right: 10%;
+            width: 70%;
+            height: 70%;
+            top: 15%;
+            bottom: 15%;
+            left: 15%;
+            right: 15%;
+            box-shadow: 5px 10px #888888;
         }
 
         .card img{
-            width: 40%;
+            width: 30%;
             height: auto;
             display: block;
             position: relative;
-            left: 30%;
-            right: 30%;
+            left: 35%;
+            right: 35%;
         }
 
         .card p{
             color: black;
-            font-family: "Arial Rounded MT Bold";
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
             text-align: center;
         }
 
         .title{
-            padding-top: 5%;
+            padding-top: 2%;
             font-weight: bold;
-            font-size: 20px;
-            margin-left: 20%;
-            margin-right: 20%;
-            width: 60%;
+            font-size: 16px;
+            margin-left: 10%;
+            margin-right: 10%;
+            width: 80%;
+            text-align: center;
 
         }
 
         .button{
-            background-color: #57B7EB;
+
             border-radius: 5px;
             font-weight: bold;
+            font-size: 11px;
             color: white;
-            margin-left: 40%;
-            margin-right: 40%;
-            width: 20%;
+            text-align: center;
+            margin-left: 35%;
+            margin-right: 35%;
+            width: 30%;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border: none;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .button1 {
+            background-color: #008CBA;
+            color: white;
+            border: 2px solid #008CBA;
+        }
+
+        .button1:hover {
+            background-color: #57B7EB;
+            color: white;
         }
 
     </style>
@@ -68,11 +88,8 @@
         <p class="title">Recuperación de contraseña</p>
         <br>
         <img src="https://firebasestorage.googleapis.com/v0/b/lowlowburger.appspot.com/o/fast-food.png?alt=media&token=63594e85-5321-431b-b544-9fa33aa9b79c">
-        <br>
-        <p>Hola</p>
         <p>Has solicitado un cambio de contraseña.</p>
-        <br>
-        <button class="button">Cambiar Contraseña</button>
+        <button class="button button1" onclick="location.href = 'https://classic.minecraft.net/';" >Cambiar Contraseña</button>
         <p>Si no has sido tú el que solicitó el cambio, ignora este mensaje</p>
     </div>
 </div>
